--- a/public/index.html
+++ b/public/index.html
@@ -16,5 +16,8 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+
+
+    <script src="https://kit.fontawesome.com/1def89b5ad.js" crossorigin="anonymous"></script>
   </body>
 </html>
